<resources>
    <string name="app_name">SHMA</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <!--strings shows on the screen -->
    <string name="Gender">Gender</string>
    <string name="Height_cm">Height(cm)</string>
    <string name="Age">Age</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="IdealWeight_kg">Ideal Weight (kg)</string>
    <string name="TimePeriod_day">Time Period (day)</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="CurrentWeight_kg">Current Weight (kg)</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
